# pico_fw

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ap/: ap.c  ap.cpp
src/bsp/: bsp.c  bsp.h
src/common/: def.h
src/common/hw/include/: cli.h  i2c.h  imu.h
src/common/hw/include/imu/: MadgwickAHRS.h  imu.h  mpu6050.h
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: cli.c  i2c.c  imu.cpp  lcd.c  uart.c
src/hw/driver/imu/: imu.cpp  mpu6050.cpp
src/hw/driver/lcd/: ili9481.c  ssd1306.c
